refactor(Lotto) : 불변 리스트로 변환하도록 변경